@@ -1,3 +1,7 @@
+  31 August 2015
+Updated case conversion with latest UnicodeData.txt (09-Feb-2015 20:08).
+See http://www.unicode.org/Public/UNIDATA/UnicodeData.txt.
+
   21 July 2015 - 6.194
 If defined with -DPYTHONINTERFACE and -DBRACMATEMBEDDED you can now make a
 Python module called 'prythat'. From Python you call (in this order)
